# jackal

./: .gitignore  flake.nix  hie.yaml  jackal.cabal  shell.nix  x.sh
jackal-core/: Jackal.hs
jackal-core/Jackal/: AnalyzeDevReq.hs  Env.hs  Free.hs  Type.hs
jackal-slack/Jackal/: Slack.hs
jackal-slack/Jackal/Slack/Endpoint/Conversations/: History.hs
test/: tests.hs
test/Jackal/Test/: FreeTest.hs  TypeTest.hs
